--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
+  --purple-white: #e7eaf6;
   --purple-gray: #a2a8d3;
-  --sea-green: #53a8b6;
-  --very-black: #222831;
-  --sea-stone: #407088;
+  --navy: #38598b;
+  --navy-black: #113f67;
 }
 
 * {
@@ -12,44 +12,37 @@
 }
 
 body {
-  background-color: var(--purple-gray);
+  background-color: #dbd8e3;
 }
 
 header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-color: var(--sea-green);
-  color: var(--very-black);
+  background-color: var(--navy-black);
+  color: white;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: flex-start;
 }
 
-.sidebar {
-  margin: -250px -278px -278px 0;
-  padding: 12px;
-  float: right;
-  width: 20%;
-  height: 50%;
-  border: var(--very-black);
-  box-shadow: 0 4px 8px var(--very-black);
-}
-
-.main-content {
-  font-size: 32px;
-  margin: -320px 284px 284px 0;
-  padding: 12px;
-  float: right;
-  width: 20%;
-  height: 50%;
-}
 
 header nav {
-  padding-top: 32x;
+  padding-top: 45px;
   margin-right: 20px;
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
   font-weight: 550;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: flex-end;
 }
 
 header nav ul {
@@ -63,10 +56,51 @@ header nav ul li {
 }
 
 a {
-  color: var(--very-black);
+  color: white;
 }
 
-img {
+figure img {
   height: auto;
-  max-width: 35%;
+  max-width: 38%;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+a img{
+  max-width: 80%;
+}
+
+.content{
+display:flex;
+width: 80%;
+margin: 40px auto;
+border: 5px solid var(--purple-gray);
+box-shadow: 5px 10px var(--navy-black);
+background-color: var(--purple-gray);
+justify-content: space-between;
+align-items: center;
+padding: 0 10px;
+
+
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  body,
+  header,
+  section,
+  img,
+
+  .sidebar {
+    flex-direction: column;
+  }
