--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
 
 header {
   padding: 20px;
+  font-size: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: var(--navy-black);
@@ -36,7 +37,7 @@ header nav {
   margin-right: 20px;
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 550;
   height: auto;
   margin-left: auto;
@@ -68,11 +69,15 @@ figure img {
   margin-right: auto;
 }
 
-a img{
-  max-width: 80%;
+a img {
+  max-height: 42%;
+  max-width: 22%;
+   display: flex;
+  justify-content: center;
+  margin-left: 52px
 }
 
-.content{
+.content {
 display:flex;
 width: 80%;
 margin: 40px auto;
@@ -82,8 +87,6 @@ background-color: var(--purple-gray);
 justify-content: space-between;
 align-items: center;
 padding: 0 10px;
-
-
 }
 
 .column {
