--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ header {
   align-items: flex-start;
 }
 
-
 header nav {
   padding-top: 45px;
   margin-right: 20px;
@@ -44,7 +43,7 @@ header nav {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 header nav ul {
@@ -71,22 +70,22 @@ figure img {
 }
 
 a img {
-  max-height: 370px;
-  max-width: 280px;
-   display: flex;
+  height: 380px;
+  width: 250px;
+  display: flex;
   justify-content: center;
 }
 
 .content {
-display:flex;
-width: 80%;
-margin: 40px auto;
-border: 5px solid var(--purple-gray);
-box-shadow: 5px 10px var(--navy-black);
-background-color: var(--purple-gray);
-justify-content: space-between;
-align-items: center;
-padding: 0 10px;
+  display: flex;
+  width: 80%;
+  margin: 40px auto;
+  border: 5px solid var(--purple-gray);
+  box-shadow: 5px 10px var(--navy-black);
+  background-color: var(--purple-gray);
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
 }
 
 .column {
@@ -101,19 +100,40 @@ h2 {
 #work {
   display: flex;
   flex-wrap: wrap;
-justify-content: space-evenly;
-width: 100%;
+  justify-content: space-evenly;
+  width: 100%;
+  border: solid red;
 }
 
-.coming-soon{
-height: 380px;
-width: 410px;
+.prework-study-guide {
+  height: 380px;
+  width: 280px;
+  border: solid red;
 }
 
-#about-me{
+#about-me {
   text-align: left;
   border: solid red;
-  width:90%;
+  width: 100%;
+}
+
+#contact-me {
+  text-align: center;
+  font-size: 22px;
+  border: solid red;
+  width: 100%;
+}
+
+#resume {
+  width: 100%;
+  text-align: center;
+  border: solid red;
+}
+
+.coming-soon {
+  height: 380px;
+  width: 280px;
+  border: solid red;
 }
 
 @media screen and (max-width: 768px) {
@@ -121,7 +141,6 @@ width: 410px;
   header,
   section,
   img,
-
   .sidebar {
     flex-direction: column;
   }
