--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,18 @@
   --navy: #38598b;
   --navy-black: #113f67;
 }
-
+/*Implemented a root element to help visualize the desired color scheme for the page*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
+/*Used asterisk for page-wide styling*/
 body {
   background-color: #dbd8e3;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+/*Implemented a universally accessible font-family for all users*/
 header {
   padding: 20px;
   font-size: 20px;
@@ -45,6 +45,7 @@ header nav {
   display: flex;
   justify-content: space-between;
 }
+/*Applied colors and special fonts to the sections*/
 
 header nav ul {
   list-style-type: none;
@@ -55,7 +56,7 @@ header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
-
+/*Grouped styles for all elements within the header to easily identify their effects*/
 a {
   color: white;
 }
@@ -75,7 +76,7 @@ a img {
   display: flex;
   justify-content: center;
 }
-
+/* Applied this above to the images to ensure they flexibly adjust with the page*/
 .content {
   display: flex;
   width: 80%;
@@ -102,18 +103,15 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 100%;
-  border: solid red;
 }
 
 .prework-study-guide {
   height: 380px;
   width: 280px;
-  border: solid red;
 }
 
 #about-me {
   text-align: left;
-  border: solid red;
   width: 79%;
   font-size: 18px;
 }
@@ -121,8 +119,7 @@ h2 {
 #contact-me {
   text-align: center;
   font-size: 26px;
-  border: solid red;
-  width: 76%;
+  width: 100%;
 }
 
 .github-profile-pic {
@@ -134,21 +131,24 @@ h2 {
 
 #resume {
   font-size: 26px;
-  width: 100%;
+  width: 80%;
   text-align: center;
-  border: solid red;
 }
 
 .resume-pic {
   height: 380px;
   width: 280px;
-  border: solid red;
   display: flex;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
 }
+/*Created glow effect when hovering over a section with my mouse*/
+.content:hover {
+  box-shadow: inset 0px 0px 8px rgb(16, 40, 219), 0 0 15px rgb(45, 0, 84);
+}
 
+/*Media Query inserted here to enable the page to adapt its layout and visual elements according to the screen size*/
 @media screen and (max-width: 768px) {
   body,
   header,
