--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,17 @@ h2 {
   margin-top: 28%;
 }
 
+.project-1{
+   height: 325px;
+  width: 220px;
+  margin-top: 28%;
+  margin-bottom: 5px;
+}
+
+#project-1-title{
+  font-size: 22px;
+}
+
 #about-me {
   text-align: left;
   width: 79%;
